--- a/package.json
+++ b/package.json
@@ -1,24 +1,31 @@
 {
-  "name": "scout-app",
-  "version": "2.0.1-beta",
-  "description": "This is the repo for the official website of the open source desktop app, Scout-App. Scout-App is the easiest to use pre-processor for Sass.",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/TheJaredWilcurt/scout-app.git"
-  },
-  "author": "The Jared Wilcurt, Zach Dennis",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/TheJaredWilcurt/scout-app/issues"
-  },
-  "homepage": "https://github.com/TheJaredWilcurt/scout-app#readme",
-  "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-jshint": "^2.0.1",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.3.1",
-    "jshint": "^2.9.2",
-    "sass": "^0.5.0"
-  }
+    "name": "scout-app-site",
+    "version": "0.1.0",
+    "description": "Official website of the open source desktop app, Scout-App. The easiest way to process Sass.",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/TheJaredWilcurt/scout-app.git"
+    },
+    "author": "The Jared Wilcurt, Micah, Ken, Kim",
+    "bugs": {
+        "url": "https://github.com/mhs/scout-app/issues"
+    },
+    "homepage": "https://github.com/TheJaredWilcurt/scout-app#readme",
+    "devDependencies": {
+        "gulp": "^3.9.1",
+        "gulp-autoprefixer": "^3.1.0",
+        "gulp-jshint": "^2.0.1",
+        "gulp-rename": "^1.2.2",
+        "gulp-sass": "^2.3.1",
+        "jshint": "^2.9.2",
+        "sass": "^0.5.0"
+    },
+    "scripts": {
+        "start": "node server.js"
+    },
+    "license": "MIT",
+    "licenses": [{
+        "type": "MIT",
+        "url": "https://github.com/mhs/scout-app/blob/master/LICENSE"
+    }]
 }
