--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     },
     "homepage": "https://github.com/TheJaredWilcurt/scout-app#readme",
     "devDependencies": {
+        "express": "^4.13.4",
         "gulp": "^3.9.1",
-        "gulp-autoprefixer": "^3.1.0",
         "gulp-jshint": "^2.0.1",
+        "gulp-livereload": "^3.8.1",
         "gulp-rename": "^1.2.2",
         "gulp-sass": "^2.3.1",
+        "gulp-uglify": "^1.5.3",
         "jshint": "^2.9.2",
         "sass": "^0.5.0"
     },
