--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "type": "git",
         "url": "git+https://github.com/TheJaredWilcurt/scout-app.git"
     },
-    "author": "The Jared Wilcurt, Micah, Ken, Kim",
+    "author": "The Jared Wilcurt",
     "bugs": {
         "url": "https://github.com/mhs/scout-app/issues"
     },
