--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "devDependencies": {
         "express": "^4.13.4",
         "gulp": "^3.9.1",
+        "gulp-insert": "^0.5.0",
         "gulp-jshint": "^2.0.1",
         "gulp-livereload": "^3.8.1",
         "gulp-rename": "^1.2.2",
